[bugfix][Pei]adjust the gap on drop down from 8 to 4px.

--- a/src/components/dropdown/styles.scss
+++ b/src/components/dropdown/styles.scss
@@ -49,7 +49,7 @@
 }
 
 .label {
-  margin-bottom: $space-1;
+  margin-bottom: $space-0;
 }
 
 .small {
